fix gap in left bar and paragraph 2

--- a/main2.css
+++ b/main2.css
@@ -75,6 +75,12 @@ h4 {
 	line-height: 26px;
 	margin-bottom: -4px;
 }
+.paragraph2 {
+	font-family: Asap;
+	font-size: 16px;
+	line-height: 26px;
+	margin-bottom: -4px;
+}
 .userpicsmall{
 	font-size: 15px;
 	display: inline-block;
@@ -144,7 +150,7 @@ h4 {
 	padding-top: 10px;
 	padding-bottom: 10px;
 	margin-top: 30px;
-	margin-bottom: 30px;
+	margin-bottom: 23px;
 }
 .footer {
 	margin: 0px auto;
